--- a/MyScience/Begin/MyScience/MainPage.xaml
+++ b/MyScience/Begin/MyScience/MainPage.xaml
@@ -43,12 +43,12 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <Image Grid.Row="0" Height="50" Width="50" Source="Images/refresh-icon.png" Margin="0, 40, 35, 0" HorizontalAlignment="Right" Name="refreshproject" Stretch="Fill" VerticalAlignment="Top" MouseLeftButtonUp="refreshproject_MouseLeftButtonUp" />
+                    <Image Grid.Row="0" Height="50" Width="50" Source="Images/refresh-icon.png" Margin="0, 40, 35, 0" HorizontalAlignment="Right" Name="refreshproject" Stretch="Fill" VerticalAlignment="Top" MouseLeftButtonUp="refreshproject_MouseLeftButtonUp" GotFocus="refreshproject_GotFocus" />
                     <ListBox Grid.Row="1" x:Name="MainListBox" Margin="0,30,-12,0" ItemsSource="{Binding Items}" SelectionChanged="MainListBox_SelectionChanged" Foreground="#FF181515">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel Margin="0,0,0,17" Width="432">
-                                    <TextBlock Text="{Binding Path=Name}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}" Foreground="#FF181515"/>
+                                    <TextBlock Text="{Binding Path=Name}" TextWrapping="NoWrap" Style="{StaticResource PhoneTextExtraLargeStyle}" Foreground="#FF181515"/>
                                     <TextBlock Text="{Binding Path=Description}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}" Foreground="#FF181515"/>
                                 </StackPanel>
                             </DataTemplate>
